--- a/pta.org
+++ b/pta.org
@@ -1,5 +1,7 @@
 #+title: Pointer Analysis
 
+#+setupfile: setup.org
+
 #+options: toc:t
 #+latex_compiler: xelatex
 #+latex_header: \usepackage{ctex}
