--- a/context-tunneling.org
+++ b/context-tunneling.org
@@ -30,14 +30,14 @@ $[c']$.
 
 Feature 可以匹配代码中的一些 method.
 
-** Feature 的组合
-
 共有 10 + 13 个 atomic feature, 分为两类
 - A类: signature feature, 语法上的, 匹配 “lang”, “void”, “()” 等字符串
 - B类: addition feature, 语义上的, 如包含 field store 的 method, 或 static method
 这23个 atomic feature 组成集合 $\mathbb{A}$.
 
-使用析取范式将它们组合可以生成更复杂的 feature:
+** Feature 的组合
+
+使用析取范式将 atomic feature 组合可以生成更复杂的 feature:
 \[ f = \bigvee_i \bigwedge_j a_{i,j}, \]
 也就是将 atomic feature $a_{i,j} \in \mathbb{A}$ 用与/或连接.
 
