--- a/index.org
+++ b/index.org
@@ -2,6 +2,9 @@
 
 This is index file.
 
+- https://detexify.kirelabs.org/classify.html
+- https://www.cmor-faculty.rice.edu/~heinken/latex/symbols.pdf
+
 * 文章列表
 
 #+name: articles
@@ -10,7 +13,7 @@ This is index file.
   (use-package f
     :ensure t)
 
-  (setq eserver-root "~/eserver-static")
+  (setq eserver-root "~/eserver-static/blog")
 
   (defun directory-non-hidden-files (directory)
     "Return absolute path of all non-hidden & non-backup files in DIRECTORY.
