--- a/index.org
+++ b/index.org
@@ -3,35 +3,8 @@
 #+date: <2022-09-25 Sun 09:20>
 #+author: thebesttv
 
-- [ ] https://detexify.kirelabs.org/classify.html
-- [X] https://www.cmor-faculty.rice.edu/~heinken/latex/symbols.pdf
-
-- [[https://taingram.org/blog/org-mode-blog.html][Building a Emacs Org-Mode Blog]]
-
-There is another form of context sensitivity
-- based on equality constraints: assignment =x = y= is modeled with
-  constraint $pt(y) = pt(x)$ instead of $pt(y) \subseteq pt(x)$
-
-#+begin_center
-This is center.
-
-=abc=
-#+end_center
-
-{{{image(80)}}}
-[[./img/avatar.jpg]]
-
-Today is <2022-09-26 Mon>, and <2022-09-26 Mon 10:59>.
-
-There is another form of context sensitivity
-- based on equality constraints: assignment =x = y= is modeled with
-  constraint $pt(y) = pt(x)$ instead of $pt(y) \subseteq pt(x)$
-#+begin_quote
-While this approach has been shown to scale for C++ programs, we are
-unaware of a scalable implementation for Java-like languages. In
-particular, the increased use of virtual dispatch in Java negatively
-affects the scalability of the equality-based approach.
-#+end_quote
+之前的 EServer 是直接运行在 Emacs 上的, 有点怕出问题, 所以还是想弄一个静
+态的放到 GitHub Pages, 这样也省心.
 
 * 文章列表
 #+include: .sitemap.org
