Update from https://github.com/thebesttv/eserver-static/commit/99153a4b5b571337596481c16bedf15492ed4631

--- a/index.org
+++ b/index.org
@@ -6,5 +6,10 @@
 之前的 EServer 是直接运行在 Emacs 上的, 有点怕出问题, 所以还是想弄一个静
 态的放到 GitHub Pages, 这样也省心.
 
+用 [[https://github.com/githubocto/repo-visualizer][repo-visualizer]] 生成对 [[https://github.com/thebesttv/eserver-static][eserver-static]] 的可视化, 如图 [[diagram]] 所示.
+
+{{{fig(博客内容可视化, diagram, 90)}}}
+[[./.diagram.svg]]
+
 * 文章列表
 #+include: .sitemap.org
