Update from https://github.com/thebesttv/eserver-static/commit/dff7df98d4631c998796e95f3ae936d93684bcfc

--- a/index.org
+++ b/index.org
@@ -9,7 +9,7 @@
 用 [[https://github.com/githubocto/repo-visualizer][repo-visualizer]] 生成对 [[https://github.com/thebesttv/eserver-static][eserver-static]] 的可视化, 如图 [[diagram]] 所示.
 
 {{{fig(博客内容可视化, diagram, 90)}}}
-[[./.diagram.svg]]
+[[./diagram.svg]]
 
 * 文章列表
 #+include: .sitemap.org
