--- a/content/gadgets.org
+++ b/content/gadgets.org
@@ -7,16 +7,18 @@
 #+begin_src elisp :exports results :results value drawer
   (setq tbt-gadgets '(("Bose QC35 ii (为了降低sb舍友的噪声,结果效果并不太好)" 1067  2021 06 03)
                       ("NB 显示器支架" 160.5 2021 05 12)
-                      ("XBox Series S 手柄" 577 2021 02 14)
+                      ("XBox Series S 手柄 (扳机键比较拉垮)" 577 2021 02 14)
                       ("致钛 1T SSD" 698 2021 01 01)
                       ("博皓冲牙器F17 (垃圾玩意,不到半年坏了好几次)" 226.53 2020 12 14)
                       ("文石 Note 3" 3531.98 2020 10 21)
-                      ("韶音 AS600 骨传导耳机" 388 2020 07 25)
+                      ("韶音 AS600 骨传导耳机 (大概22年6月左右寄了)" 388 2020 07 25)
                       ("英睿达 500G SSD" 389 2020 06 24)
                       ("MOFT电脑支架 (真的方便又好用,吹爆🥰)" 98 2019 10 10)
                       ("小米手环4" 168.98 2019 10 06)
                       ("Redmi Note 8 Pro" 1799 2019 10 02)
-                      ("凉鞋" 178 2019 09 23)))
+                      ("凉鞋" 178 2019 09 23)
+                      ("XBox Series S (西瓜皮 yyds; 双人成行好好玩)" 2399 2022 05 31)
+                      ("美的电水壶 (烧水比天然气的快多了)" 139 2022 06 27)))
 
   (defun get-elapsed-day (year month day)
     (/
