Update from https://github.com/thebesttv/eserver-static/commit/84b2b56dd21b163d1dc3e710beb3744dc2df447c

--- a/content/collections/index.org
+++ b/content/collections/index.org
@@ -254,6 +254,13 @@
   Lurking, Mostly Nearby.  Often People Question Realtors' Sincerity.
   Take Umbrage.  Violators Will ...
   #+end_quote
+- [[https://mymodernmet.com/brad-wilson-other-world-animal-portraits/][Photographer Captures Striking Studio Portraits To Show a Dignified Side of Wild Animals]]
+  帅气好看的鸟鸟😍
+  # zero width space is appended to the end of each image for separation
+  {{{image(80)}}}
+  [[./index/Brad-Wilson-EurasianEagleOwl3.jpg]]​
+  {{{image(80)}}}
+  [[./index/Brad-Wilson-RainbowLorikeet2.jpg]]​
 
 ** 关于死亡 --- 让世界知道我来过
 
