--- a/content/daily/2021-05-20.org
+++ b/content/daily/2021-05-20.org
@@ -23,12 +23,10 @@
 
   毛概下课就四工门口了，人真的超级多，只拍到了 520 的三分之二😑。
 
-  {{{image(100)}}}
-  [[./2021-05-20/lights-1.jpg]]
-
-  {{{image(100)}}}
+  {{{image(80)}}}
+  [[./2021-05-20/lights-1.jpg]]​
+  {{{image(80)}}}
   [[./2021-05-20/lights-2.jpg]]
-
   偷偷盗一张亦憨的520全图🤫😉
-  {{{image(100)}}}
+  {{{image(80)}}}
   [[./2021-05-20/lights-3.jpg]]
