Update from https://github.com/thebesttv/eserver-static/commit/169bc1bd350dbc347ab2a848cd0d8ffef5c8ff5a

--- a/content/collections/tools.org
+++ b/content/collections/tools.org
@@ -5,3 +5,11 @@
 - [[https://ntfy.sh/][ntfy.sh]] 一行 curl 即可使用的推送服务.
   使用 HTTP POST 发布推送, 有不同的 topic.
   无需登录, topic 即为 id.  非常适合命令行用.
+
+* Git
+
+- [[https://gource.io/][Gource - a software version control visualization tool]]
+  可视化 Git 历史, 很有意思
+  - 还有人拿它来可视化论坛的帖子:
+    [[https://edgeryders.eu/t/visualizing-our-7-years-of-online-dialogue-with-gource/11905][Visualizing our 7 years of online dialogue with Gource]]
+  - [[https://gist.github.com/Gnzlt/a2bd6551f0044a673e455b269646d487][gourcevideo.sh]] 使用 ffmpeg 将 Gource 的 PPM 输出编码成 mp4
