Update from https://github.com/thebesttv/eserver-static/commit/60f118f9b2ee03d2c6b91afdc573315b348a2f48

--- a/content/collections/tools.org
+++ b/content/collections/tools.org
@@ -13,3 +13,8 @@
   - 还有人拿它来可视化论坛的帖子:
     [[https://edgeryders.eu/t/visualizing-our-7-years-of-online-dialogue-with-gource/11905][Visualizing our 7 years of online dialogue with Gource]]
   - [[https://gist.github.com/Gnzlt/a2bd6551f0044a673e455b269646d487][gourcevideo.sh]] 使用 ffmpeg 将 Gource 的 PPM 输出编码成 mp4
+
+* XBox
+
+- [[https://github.com/zhxie/pcap2socks][pcap2socks]] 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
+  - [[https://www.nbmao.com/archives/4240][Pcap2socks-直接利用 SOCKS 代理的游戏加速器]]
