--- a/content/collections/tools.org
+++ b/content/collections/tools.org
@@ -18,3 +18,8 @@
 
 - [[https://github.com/zhxie/pcap2socks][pcap2socks]] 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
   - [[https://www.nbmao.com/archives/4240][Pcap2socks-直接利用 SOCKS 代理的游戏加速器]]
+
+* Bilibili
+
+- [[https://github.com/nICEnnnnnnnLee/BilibiliDown][BilibiliDown]] 视频下载
+- [[https://github.com/BililiveRecorder/BililiveRecorder][B站录播姬]] 直播录制
