Update from https://github.com/thebesttv/eserver-static/commit/b484fca87c9aa3bed9bd4824bcf21a0b86481c1e

--- a/content/collections/tools.org
+++ b/content/collections/tools.org
@@ -1,5 +1,9 @@
 #+title: 有用的工具
 
+* 笔记
+
+- [[https://github.com/xournalpp/xournalpp/][Xournal++]] 支持数位板的开源笔记软件
+
 * 推送
 
 - [[https://ntfy.sh/][ntfy.sh]] 一行 curl 即可使用的推送服务.
