--- a/content/emacs/org-hyperlink.org
+++ b/content/emacs/org-hyperlink.org
@@ -2,6 +2,17 @@
 #+date: <2022-09-22 Thu 20:15>
 #+author: thebesttv
 
+* URLs
+
+** Info
+
+Use the =info= link type to link to an Info manual or a specific node. \\
+Link format: =info:manual-name#optional node name=.
+- To link to the Org manual: \\
+  =see [[info:org][the Org manual]]= \to see [[info:org][the Org manual]];
+- To link to the "User Input" node of the Emacs manual: \\
+  =see [[info:emacs#User Input][Kinds of User Input]]= \to see [[info:emacs#User Input][Kinds of User Input]].
+
 * Headings
 :PROPERTIES:
 :CUSTOM_ID: hlinks
@@ -16,15 +27,15 @@ Use =C-c C-x p= to add =CUSTOM_ID= property to headings:
 #+end_src
 Then you can use =[[#hlinks]]= to reference it.  For example,
 #+begin_verse
-"=see Section [[#hlinks]]=" \to see Section [[#hlinks]];
-"=see Section [[#hlinks][/Hyperlinks/]]=" \to see Section [[#hlinks][/Hyperlinks/]].
+=see Section [[#hlinks]]= \to see Section [[#hlinks]];
+=see Section [[#hlinks][/Hyperlinks/]]= \to see Section [[#hlinks][/Hyperlinks/]].
 #+end_verse
 
 Use =[[* Headings]]= to directly refer to the name of a heading.  Note
 that there's only one asterisk (=*=), no matter how deep the heading is.
 #+begin_verse
-"=see Section [[* Named Elements]]=" \to see Section [[* Named Elements]];
-"=see the [[* A sub-section][sub-section]]= \to see the [[* A sub-section][sub-section]].
+=see Section [[* Named Elements]]= \to see Section [[* Named Elements]];
+=see the [[* A sub-section][sub-section]]= \to see the [[* A sub-section][sub-section]].
 #+end_verse
 
 Use =C-c C-o= to nevigate to the target, and =C-c &= to go back.
@@ -33,7 +44,7 @@ Use =C-c C-o= to nevigate to the target, and =C-c &= to go back.
 
 You can go to a specific line in a file with by appending =::N= at the
 end of file name, e.g. =[[./org-hyperlink.org::10]]=.  However, this
-does can't be exported to HTML.
+can't be exported to HTML.
 
 * Named Elements
 
@@ -126,7 +137,7 @@ This word---​<<<thebesttv>>>​---is a radio target.
 ** A sub-section
 
 #+begin_src org
-  {{{image(30)}}}
+  {{{image(50)}}}
   ,#+name: named image
   ,#+caption: sample image
   [[../daily/2021-05-20/lights-3.jpg]]
@@ -146,7 +157,7 @@ This word---​<<<thebesttv>>>​---is a radio target.
   | 1 | 2 | 3 | 4 |
 #+end_src
 
-{{{image(30)}}}
+{{{image(50)}}}
 #+name: named image
 #+caption: sample image
 [[../daily/2021-05-20/lights-3.jpg]]
