--- a/content/collections/tools.org
+++ b/content/collections/tools.org
@@ -20,7 +20,7 @@
 
 * XBox
 
-- [[https://github.com/zhxie/pcap2socks][pcap2socks]] 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
+- [[https://github.com/zhxie/pcap2socks][pcap2socks]] 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器, 见[[../pcap2socks.org][使用 pcap2socks 加速 XBox]]
   - [[https://www.nbmao.com/archives/4240][Pcap2socks-直接利用 SOCKS 代理的游戏加速器]]
 
 * Bilibili
